fixed the css not showing up in footer

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,6 @@ body {
   height: 60px;
   background-color: rgba(28, 235, 200, 0.5);
   text-align: center;
-  padding-top: 10px;
   margin: auto;
   color: white;
 }
